RESOLVED FIXED210589
REGRESSION (r260102): ASSERTION FAILED: m_arbitrators.contains(proxy) in WebKit::SharedArbitrator::endRoutingArbitrationForArbitrator
https://bugs.webkit.org/show_bug.cgi?id=210589
Summary REGRESSION (r260102): ASSERTION FAILED: m_arbitrators.contains(proxy) in WebK...
Jer Noble
Reported 2020-04-15 20:00:29 PDT
REGRESSION (r260102): ASSERTION FAILED: m_arbitrators.contains(proxy) in WebKit::SharedArbitrator::endRoutingArbitrationForArbitrator
Attachments
Patch (8.33 KB, patch)
2020-04-15 20:04 PDT, Jer Noble
eric.carlson: review+
Patch for landing (8.33 KB, patch)
2020-04-15 22:13 PDT, Jer Noble
no flags
Jer Noble
Comment 1 2020-04-15 20:00:51 PDT
Jer Noble
Comment 2 2020-04-15 20:04:38 PDT
Eric Carlson
Comment 3 2020-04-15 21:06:51 PDT
Comment on attachment 396607 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=396607&action=review > Source/WebCore/platform/audio/mac/AudioSessionMac.mm:104 > m_routingArbitrationClient->leaveRoutingAbritration(); > + m_private->inRoutingArbitration = false; Nit: I think it is generally a good idea to change the state before making the callback in case the callback results in a call back into this module.
Jer Noble
Comment 4 2020-04-15 22:10:59 PDT
(In reply to Eric Carlson from comment #3) > Comment on attachment 396607 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=396607&action=review > > > Source/WebCore/platform/audio/mac/AudioSessionMac.mm:104 > > m_routingArbitrationClient->leaveRoutingAbritration(); > > + m_private->inRoutingArbitration = false; > > Nit: I think it is generally a good idea to change the state before making > the callback in case the callback results in a call back into this module. Good point!
Jer Noble
Comment 5 2020-04-15 22:13:02 PDT
Created attachment 396618 [details] Patch for landing
EWS
Comment 6 2020-04-15 22:53:46 PDT
Committed r260172: <https://trac.webkit.org/changeset/260172> All reviewed patches have been landed. Closing bug and clearing flags on attachment 396618 [details].
Note You need to log in before you can comment on or make changes to this bug.