REGRESSION (r260102): ASSERTION FAILED: m_arbitrators.contains(proxy) in WebKit::SharedArbitrator::endRoutingArbitrationForArbitrator https://bugs.webkit.org/show_bug.cgi?id=210589 <rdar://problem/61844208>

Reviewed by Eric Carlson.

Source/WebCore:

Track whether the session successfully entered routing arbitration and only call
leaveRoutingAbritration() if entering was sucessful.

* platform/audio/mac/AudioSessionMac.mm:
(WebCore::AudioSession::setCategory):

Source/WebKit:

Protect against an assertion in the SharedArbitrator in case where a WebProcess is terminated before it can call
endRoutingArbitration().

* UIProcess/Media/AudioSessionRoutingArbitratorProxy.cpp:
(WebKit::AudioSessionRoutingArbitratorProxy::processDidTerminate):
* UIProcess/Media/AudioSessionRoutingArbitratorProxy.h:
* UIProcess/Media/cocoa/AudioSessionRoutingArbitratorProxyCocoa.mm:
(WebKit::SharedArbitrator::isInRoutingArbitrationForArbitrator):
(WebKit::SharedArbitrator::beginRoutingArbitrationForArbitrator):
(WebKit::SharedArbitrator::endRoutingArbitrationForArbitrator):
(WebKit::AudioSessionRoutingArbitratorProxy::processDidTerminate):
* UIProcess/WebProcessProxy.cpp:
(WebKit::WebProcessProxy::processDidTerminateOrFailedToLaunch):


Canonical link: https://commits.webkit.org/223458@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@260172 268f45cc-cd09-0410-ab3c-d52691b4dbfc